<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_favorite_collected_24dp"
            android:title="@string/collect" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/message" />

        <item
            android:id="@+id/nav_set"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/about" />

    </group>


</menu>
