<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.wu.wanandroiddemo.ui.aboutus.AboutUsActivity">

    <LinearLayout
        android:id="@+id/activity_about_us"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/version_number"
                android:textColor="@color/colorTextDeep"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_introduce"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/api_introduce"
                android:textColor="@color/colorTextDeep"
                android:textSize="@dimen/sizeText14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivide" />

            <TextView
                android:id="@+id/tv_github"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/github"
                android:textColor="@color/colorTextDeep"
                android:textSize="@dimen/sizeText14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivide" />


            <TextView
                android:id="@+id/tv_score"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                android:gravity="center_vertical"
                android:text="去评分"
                android:textColor="#333333"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDivide" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
